# Phishing-Website-Detector-Using-Machine-Learning

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml
app/: main.py
app/artifacts/v1/: metadata.json  model.joblib  scaler.joblib
app/controllers/v1/: __init__.py  predict.py
app/core/: __init__.py  config.py  exceptions.py  lifespan.py  logging.py
app/database/: __init__.py  engine.py
app/database/migrations/: env.py
app/database/migrations/versions/: 4609fac29b6d_initial_schema.py
app/database/models/: __init__.py  feedback.py  url.py
app/middleware/: cors.py  rate_limit.py
app/routes/v1/: __init__.py  predict.py
app/schemas/: __init__.py  request.py  response.py
app/scripts/: run_backend.py
app/services/: __init__.py  detection_service.py  feature_extractor.py  feedback_service.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: svm_model.pkl
backend/app/schemas/: request.py  response.py
backend/app/services/: detection_service.py  feature_extractor.py
frontend/: streamlit_app.py
frontend/components/: header.py  results.py  scanner.py  visualizations.py
ml/datasets/: phising_urls.xlsx
ml/evaluation/: evaluate_model.py
ml/training/: train_model.py
ml/visualization/: visualize.py
scripts/: run_backend.sh  run_frontend.sh
