[project]
name = "phishing-detection-framework"
version = "1.0.0"
description = "Phishing website detection using SVM machine learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "joblib>=1.4.0",
    # Frontend
    "streamlit>=1.40.0",
    "requests>=2.32.0",
    "plotly>=5.24.0",
    # Feature extraction
    "beautifulsoup4>=4.12.0",
    "python-whois>=0.9.4",
    "tldextract>=5.1.0",
    "python-dateutil>=2.9.0",
    # Pydantic (bundled with FastAPI but explicit for schema clarity)
    "pydantic>=2.9.0",
    # HTTP client for tests and frontend
    "httpx>=0.27.0",
    # Settings management
    "pydantic-settings>=2.5.0",
    # Process manager — runs backend + frontend from a single command
    "honcho>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend", "ml"]
