[project]
name = "phishing-detection-framework"
version = "1.0.0"
description = "Phishing website detection using SVM machine learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "joblib>=1.4.0",
    "beautifulsoup4>=4.12.0",
    "python-whois>=0.9.4",
    "tldextract>=5.1.0",
    "python-dateutil>=2.9.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ml"]
